k8s-manifests/05-ticket-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: event-management
  labels:
    app: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
      - name: ticket-service
        image: aravindroy1/ticket-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3004
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: event-management
  labels:
    app: ticket-service
spec:
  type: ClusterIP
  selector:
    app: ticket-service
  ports:
  - port: 80
    targetPort: 3004
