k8s-manifests/09-mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-mongo
  namespace: event-management
  labels:
    app: event-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-mongo
  template:
    metadata:
      labels:
        app: event-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: event-mongo
  namespace: event-management
spec:
  selector:
    app: event-mongo
  ports:
  - port: 27017
    targetPort: 27017
